--- a/my-app/src/components/App/App.css
+++ b/my-app/src/components/App/App.css
@@ -1,5 +1,5 @@
 * {
-   font-family: 'Open Sans';
+   font-family: 'Inter';
  }
  body {
    background: gray
@@ -25,10 +25,6 @@
  .completed {
    text-decoration: line-through;
    opacity: 0.4;
- }
- 
- .todo-form {
-   margin-bottom: 32px;
  }
  
  .todo-button {
@@ -94,42 +90,3 @@
    margin-right: 10px;
  }
  
- /* Dropdown Styling */
- .dropdown {
-   position: relative;
-   display: inline-block;
-   text-align: left;
- }
- 
- .dropdown-list-container {
-   transform-origin: top;
-   position: absolute;
-   padding: 10px 0px;
-   right: 0rem;
-   margin-top: 2rem;
-   border-radius: 0.375rem;
-   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-   background-color: white;
- }
- 
- .dropdown-list-btn {
-   background-color: white;
-   border: none;
-   padding: 10px 30px;
- }
- 
- .dropdown-list-btn:hover {
-   background-color: #eaeaea;
- }
- 
- .edit-input {
-   border: none;
- }
- 
- .red {
-   color: red;
- }
- 
- .blue {
-   color: blue;
- }
